tests/paczka1/fuzzy1/43475746.err
Error in line 3: iDa7h S603 81,9
Error in line 9: vuO9ftFd S945 48,6
Error in line 12: vuO9ftFd A282 -4,4
Error in line 10: vuO9ftFd A282 60,6
Error in line 15: vuO9ftFd S603 43,7
Error in line 13: fuUOu0GXK87 A282 148,9
Error in line 11: iDa7h A282 92,6
Error in line 27: F5G2 A282 168,6
Error in line 29: iDa7h S945 77,9
